--- a/app/scss/base/reset.scss
+++ b/app/scss/base/reset.scss
@@ -408,7 +408,7 @@ textarea {
  */
 
 ::-webkit-input-placeholder {
-  color: #8B8B8B;
+  color: #8b8b8b;
   opacity: 1;
 }
 
@@ -424,11 +424,10 @@ textarea {
 
 /* Change Autocomplete styles in Chrome*/
 input:-webkit-autofill,
-input:-webkit-autofill:hover, 
-input:-webkit-autofill:focus
 textarea:-webkit-autofill,
-textarea:-webkit-autofill:hover
-textarea:-webkit-autofill:focus,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus textarea:-webkit-autofill,
+textarea:-webkit-autofill:hover textarea:-webkit-autofill:focus,
 select:-webkit-autofill,
 select:-webkit-autofill:hover,
 select:-webkit-autofill:focus {
