--- a/app/scss/modules/howitworks.scss
+++ b/app/scss/modules/howitworks.scss
@@ -1,9 +1,10 @@
 .howitworks {
-  padding-bottom: 145px;
+  @include noScrollbar;
+  padding-bottom: 100px;
   background-color: #fff;
 
-  @include md {
-    padding-bottom: 100px;
+  @include sm {
+    @include blueScrollbar;
   }
 
   .container {
@@ -15,7 +16,7 @@
     font-family: $main-ff-bold;
     font-size: 48px;
     line-height: 72px;
-    
+
     @include sm {
       font-size: 30px;
       line-height: 40px;
@@ -27,6 +28,7 @@
     justify-content: space-between;
     flex-wrap: nowrap;
     overflow-x: auto;
+    padding-bottom: 48px;
 
     padding-right: 120px;
 
@@ -92,6 +94,7 @@
         display: block;
 
         &:hover {
+          padding-bottom: 24px;
           border-top: 1px solid $mainBlue;
           border-bottom: 1px solid $mainBlue;
           color: $mainBlue;
